--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"microcms-js-sdk": "^2.3.3"
+	}
 }
