--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-cloudflare": "^2.2.2",
     "@sveltejs/kit": "^1.5.0",
+    "cheerio": "1.0.0-rc.12",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "tslib": "^2.4.1",
