--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@sveltejs/adapter-cloudflare": "^2.2.2",
     "@sveltejs/kit": "^1.5.0",
     "cheerio": "1.0.0-rc.12",
+    "microcms-js-sdk": "^2.5.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.0"
   },
-  "type": "module",
-  "dependencies": {
-    "microcms-js-sdk": "^2.3.3"
-  }
+  "type": "module"
 }
