--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@sveltejs/adapter-cloudflare": "^2.3.3",
     "@sveltejs/kit": "^1.26.0",
+    "@types/nodemailer": "^6.4.13",
     "microcms-js-sdk": "^2.7.0",
+    "nodemailer": "^6.9.7",
     "svelte": "^4.2.2",
     "svelte-check": "^3.5.2",
     "tslib": "^2.6.2",
