--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.7",
     "svelte": "^4.2.2",
     "svelte-check": "^3.5.2",
+    "svelte-node-compat": "^0.0.7",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
