--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^2.3.3",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.26.0",
     "@types/nodemailer": "^6.4.13",
     "microcms-js-sdk": "^2.7.0",
