--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^5.0.1",
-    "@sveltejs/kit": "^1.27.5",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/nodemailer": "^6.4.14",
     "microcms-js-sdk": "^2.7.0",
     "nodemailer": "^6.9.13",
@@ -19,7 +20,7 @@
     "svelte-check": "^3.6.8",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
-    "vite": "^4.5.2"
+    "vite": "^5.0.0"
   },
   "type": "module"
 }
