--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@picocss/pico": "^2.0.6",
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/nodemailer": "^6.4.14",
     "microcms-js-sdk": "^3.0.0",
     "nodemailer": "^6.9.13",
+    "sass": "^1.69.5",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.8",
     "tslib": "^2.6.2",
