--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/highlightjs": "^9.12.6",
     "@types/nodemailer": "^6.4.14",
+    "highlight.js": "^11.9.0",
     "microcms-js-sdk": "^3.0.0",
     "nodemailer": "^6.9.13",
     "sass": "^1.69.5",
