--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "typescript": "^5.4.3",
     "vite": "^5.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@8.15.8+sha512.d1a029e1a447ad90bc96cd58b0fad486d2993d531856396f7babf2d83eb1823bb83c5a3d0fc18f675b2d10321d49eb161fece36fe8134aa5823ecd215feed392"
 }
