環境変数を追加する

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -14,3 +14,11 @@ jobs:
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          MICROCMS_API_KEY: ${{ env.MICROCMS_API_KEY }}
+          MICROCMS_SERVICE_DOMAIN: ${{ env.MICROCMS_SERVICE_DOMAIN }}
+          MY_BCC_EMAIL_ADDRESS: ${{ env.MY_BCC_EMAIL_ADDRESS }}
+          MY_EMAIL_ADDRESS: ${{ env.MY_EMAIL_ADDRESS }}
+          SMTP_PORT: ${{ env.SMTP_PORT }}
+          SMTP_SERVER: ${{ env.SMTP_SERVER }}
+          SMTP_TOKEN: ${{ env.SMTP_TOKEN }}
+          SMTP_USERNAME: ${{ env.SMTP_USERNAME }}
