--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@idotj/mastodon-embed-timeline": "^4.4.2",
     "@picocss/pico": "^2.0.6",
     "@sveltejs/adapter-node": "^5.2.7",
     "@sveltejs/kit": "^2.6.1",
