Pico CSSをIonicに置き換える

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/browser": "^6.0.3",
+    "@capacitor/cli": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
     "@idotj/mastodon-embed-timeline": "^4.4.2",
-    "@picocss/pico": "^2.0.6",
+    "@ionic/core": "^8.3.4",
     "@sveltejs/adapter-cloudflare": "^4.7.4",
     "@sveltejs/kit": "^2.6.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@types/highlightjs": "^9.12.6",
     "highlight.js": "^11.10.0",
+    "ionic-svelte": "^0.5.85",
     "microcms-js-sdk": "^3.1.2",
     "sass": "^1.79.4",
     "svelte": "^4.2.19",
