--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "vite": "^6.0.6"
   },
   "type": "module",
-  "packageManager": "pnpm@9.12.3+sha256.24235772cc4ac82a62627cd47f834c72667a2ce87799a846ec4e8e555e2d4b8b"
+  "packageManager": "pnpm@9.15.1"
 }
