--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "devDependencies": {
     "@idotj/mastodon-embed-timeline": "^4.4.2",
-    "@picocss/pico": "^2.0.6",
     "@sveltejs/adapter-cloudflare": "^5.0.0",
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/highlightjs": "^9.12.6",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "highlight.js": "^11.11.1",
     "microcms-js-sdk": "^3.1.2",
+    "postcss": "^8.4.49",
     "sass": "^1.83.0",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^6.0.6"
