Vercelのアダプターを使う

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "@idotj/mastodon-embed-timeline": "^4.4.2",
-    "@sveltejs/adapter-cloudflare": "^5.0.0",
+    "@sveltejs/adapter-vercel": "^5.5.2",
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/typography": "^0.5.15",
