msw, jsdom, testing-libraryを追加する

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/svelte": "^5.2.6",
     "@types/highlightjs": "^9.12.6",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
     "highlight.js": "^11.11.1",
+    "jsdom": "^25.0.1",
     "microcms-js-sdk": "^3.1.2",
+    "msw": "^2.7.0",
     "pdfjs-dist": "^4.9.155",
     "postcss": "^8.4.49",
     "sass": "^1.83.0",
