--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "prisma generate && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
     "@idotj/mastodon-embed-timeline": "^4.4.2",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/client": "^6.2.1",
     "@sveltejs/adapter-vercel": "^5.5.2",
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -23,12 +25,14 @@
     "@types/highlightjs": "^9.12.6",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
+    "fast-xml-parser": "^4.5.1",
     "highlight.js": "^11.11.1",
     "jsdom": "^25.0.1",
     "microcms-js-sdk": "^3.1.2",
     "msw": "^2.7.0",
     "pdfjs-dist": "^4.9.155",
     "postcss": "^8.4.49",
+    "prisma": "^6.2.1",
     "sass": "^1.83.0",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
