--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
-    "test": "pnpm test:unit run"
+    "test": "pnpm test:unit run",
+    "worker:dev": "wrangler dev ./workers/relayBlocker.ts",
+    "worker:deploy": "wrangler deploy ./workers/relayBlocker.ts"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
+    "@cloudflare/workers-types": "^4.20250204.0",
     "@idotj/mastodon-embed-timeline": "^4.4.2",
     "@prisma/client": "^6.2.1",
     "@sveltejs/adapter-vercel": "^5.5.2",
@@ -40,7 +43,8 @@
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^6.0.9",
-    "vitest": "^2.0.4"
+    "vitest": "^2.0.4",
+    "wrangler": "^3.107.3"
   },
   "type": "module",
   "packageManager": "pnpm@9.15.1"
