--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/svelte": "^5.2.6",
     "@types/highlightjs": "^9.12.6",
+    "@types/node": "^22.13.1",
     "autoprefixer": "^10.4.20",
     "canonicalize": "^2.0.0",
     "daisyui": "^4.12.23",
