--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
-    "test": "pnpm test:unit run",
-    "worker:dev": "wrangler dev ./src/lib/workers/relayBlocker.ts",
-    "worker:deploy": "wrangler deploy ./src/lib/workers/relayBlocker.ts"
+    "test": "pnpm test:unit run"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.717.0",
