--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@sveltejs/adapter-vercel": "^5.5.2",
     "@sveltejs/kit": "^2.15.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/svelte": "^5.2.6",
     "@types/highlightjs": "^9.12.6",
-    "autoprefixer": "^10.4.20",
     "canonicalize": "^2.0.0",
-    "daisyui": "^4.12.23",
+    "daisyui": "^5.0.12",
     "fast-xml-parser": "^4.5.1",
     "highlight.js": "^11.11.1",
     "jsdom": "^25.0.1",
@@ -37,7 +37,7 @@
     "sass": "^1.83.0",
     "svelte": "^5.16.0",
     "svelte-check": "^4.1.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^6.0.14",
