--- a/package.json
+++ b/package.json
@@ -13,37 +13,47 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
-    "@cloudflare/workers-types": "^4.20250406.0",
+    "@cloudflare/workers-types": "^4.20250409.0",
     "@idotj/mastodon-embed-timeline": "^4.7.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "@sveltejs/adapter-vercel": "^5.7.0",
     "@sveltejs/kit": "^2.20.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/svelte": "^5.2.6",
+    "@testing-library/svelte": "^5.2.7",
     "@types/highlightjs": "^9.12.6",
     "canonicalize": "^2.1.0",
-    "daisyui": "^5.0.12",
+    "daisyui": "^5.0.17",
     "fast-xml-parser": "^5.2.0",
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "microcms-js-sdk": "^3.2.0",
-    "msw": "^2.7.0",
+    "msw": "^2.7.3",
     "pdfjs-dist": "^5.1.91",
     "postcss": "^8.5.3",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "sass": "^1.86.3",
-    "svelte": "^5.25.8",
-    "svelte-check": "^4.1.1",
+    "svelte": "^5.25.9",
+    "svelte-check": "^4.1.5",
     "tailwindcss": "^4.1.3",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vite": "^6.2.5",
     "vitest": "^3.1.1",
-    "wrangler": "^4.8.0"
+    "wrangler": "^4.9.1"
   },
   "type": "module",
-  "packageManager": "pnpm@9.15.1"
+  "packageManager": "pnpm@10.8.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "@prisma/client",
+      "@prisma/engines",
+      "msw",
+      "prisma",
+      "workerd"
+    ]
+  }
 }
