--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "prepare": "svelte-kit sync",
     "dev": "vite dev",
     "build": "prisma generate && vite build",
     "preview": "vite preview",
