highlight.jsを削除し、Shikiを追加する

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "canonicalize": "^2.1.0",
     "daisyui": "^5.0.17",
     "fast-xml-parser": "^5.2.0",
-    "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "microcms-js-sdk": "^3.2.0",
     "msw": "^2.7.3",
@@ -36,6 +35,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.6.0",
     "sass": "^1.86.3",
+    "shiki": "^3.3.0",
     "svelte": "^5.25.9",
     "svelte-check": "^4.1.5",
     "tailwindcss": "^4.1.3",
