--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "daisyui": "^5.0.17",
     "fast-xml-parser": "^5.2.0",
     "jsdom": "^26.0.0",
+    "marked": "^15.0.11",
     "microcms-js-sdk": "^3.2.0",
     "msw": "^2.7.3",
     "pdfjs-dist": "^5.1.91",
