--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "canonicalize": "^2.1.0",
     "daisyui": "^5.0.17",
     "fast-xml-parser": "^5.2.0",
+    "gray-matter": "^4.0.3",
     "jsdom": "^26.0.0",
     "marked": "^15.0.11",
     "microcms-js-sdk": "^3.2.0",
