全てのブランチでテストを実行する

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,6 @@
 name: テストとデプロイ
 on:
   push:
-    branches: [main]
 
 jobs:
   test:
@@ -25,6 +24,7 @@ jobs:
 
   deploy:
     needs: test
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
