Nodeサーバー用のアダプターを使う

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@cloudflare/workers-types": "^4.20250409.0",
     "@idotj/mastodon-embed-timeline": "^4.7.0",
     "@prisma/client": "^6.6.0",
-    "@sveltejs/adapter-vercel": "^5.7.0",
+    "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/postcss": "^4.1.3",
