--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.6.0",
     "sass": "^1.86.3",
+    "sharp": "^0.34.2",
     "shiki": "^3.3.0",
     "svelte": "^5.25.9",
     "svelte-check": "^4.1.5",
@@ -55,6 +56,7 @@
       "@prisma/engines",
       "msw",
       "prisma",
+      "sharp",
       "workerd"
     ]
   }
