lodash.memoizeを追加する

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/svelte": "^5.2.7",
     "@types/highlightjs": "^9.12.6",
+    "@types/lodash.memoize": "^4.1.9",
     "canonicalize": "^2.1.0",
     "daisyui": "^5.0.17",
     "fast-xml-parser": "^5.2.0",
     "gray-matter": "^4.0.3",
     "jsdom": "^26.0.0",
+    "lodash.memoize": "^4.1.2",
     "marked": "^15.0.11",
     "marked-gfm-heading-id": "^4.1.1",
     "msw": "^2.7.3",
