esbuildのビルドスクリプトの実行を許可する

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "@parcel/watcher",
       "@prisma/client",
       "@prisma/engines",
+      "esbuild",
       "msw",
       "prisma",
       "sharp",
